# BSG2

./: .gitignore  CMakeLists.txt  CMakePresets.json  linux-bootstrap.sh  linux-build.sh  linux-install.sh  vcpkg.json
assets/shaders/base/: fragment.glsl
examples/: main.cpp  test_app.cpp  test_app.h
examples/test_app/: main.cpp  test_app.cpp  test_app.h
examples/test_app/assets/shaders/base/: vertex.glsl
examples/test_app/assets/shaders/inversion/: fragment.glsl  vertex.glsl
include/: application.h  asset_manager.h  batch.h  camera.h  file_util.h  frame_buffer.h  shader.h  sleep_util.h  texture.h  texture_manager.h  vertex.h  viewport.h
src/: application.cpp  application.h  asset.cpp  asset.h  asset_manager.cpp  asset_manager.h  batch.cpp  batch.h  camera.cpp  camera.h  file_util.cpp  frame_buffer.cpp  main.cpp  shader.cpp  shader.h  sleep_util.cpp  sleep_util.h  test_app.cpp  test_app.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h  vertex.cpp  vertex.h  viewport.cpp
